fixed gap issue

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ nav li a:hover {
 .wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
-  grid-gap: 30px;
+  grid-gap: 10px;
   grid-auto-rows: minmax(400px, auto);
 }
 
